--- a/src/template.html
+++ b/src/template.html
@@ -1,16 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-     
-    <div style="text-align: center;">
-        <h1>welcome to...</h1>
-        <p><code>Al$haib</code></p>
-    </div>
-    <div id="greeting"></div>
-</body>
+  </head>
+  <body></body>
 </html>
